--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
 dependencies {
     implementation Dependencies.kotlinStdLib
     implementation Dependencies.appCompat
+    implementation Dependencies.kotlinXCoroutines
     implementation Dependencies.androidXCore
     implementation Dependencies.constraintLayout
     implementation Dependencies.navigationFragment
