--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     testImplementation TestDependencies.assertJ
     testImplementation TestDependencies.jUnit
     testImplementation TestDependencies.mockitoKotlin
+    testImplementation TestDependencies.kotlinXTest
+
     androidTestImplementation TestDependencies.testRunner
     androidTestImplementation TestDependencies.espresso
 }
